--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @CHARSET "ISO-8859-1";
 
+/* The CSS file of the magazine. */
 body {
 	font-family: Georgia, "Times New Roman", Serif;
 	position: relative;
@@ -35,13 +36,13 @@ body {
 #topbar a {
 	padding: 3px;
 	color: #5A8039;
+	text-decoration: underline;
 }
 
 #topbar a:hover {
 	color: #75CC29;
 }
 
-}
 header {
 	margin-left: auto;
 	margin-right: auto;
@@ -128,7 +129,6 @@ nav ul li ul {
 nav ul li ul li {
 	width: 100px;
 	float: left;
-	/* border-top: 1px solid #5A8039; */
 }
 
 nav ul li ul a {
@@ -152,10 +152,6 @@ nav ul li ul a:hover {
 	margin-top: 20px;
 	background-color: rgba(255, 255, 255, 0.7);
 	border-bottom: 3px solid #5A8039;
-}
-
-.article_headline {
-	
 }
 
 .article_headline a {
@@ -320,10 +316,6 @@ textarea {
 	resize: none;
 }
 
-.member_panel {
-	
-}
-
 .member_panel table,th,td {
 	width: 100%;
 	border-collapse: collapse;
@@ -362,58 +354,11 @@ textarea {
 	margin-top: 15px;
 }
 
-#article_body {
-	
-}
-
 .writer_panel button {
 	margin-top: 15px;
 }
 
-/*----------------------------*/
-.color1 {
-	color: #CDD1D1
-}
-
-.color2 {
-	color: #2E2E2E
-}
-
-.color3 {
-	color: #333333
-}
-
-.color4 {
-	color: #5A8039
-}
-
-.color5 {
-	color: #8DC63F
-}
-
-.color6 {
-	color: #898989
-}
-
-.color7 {
-	color: #D9D9D9
-}
-
-.color8 {
-	color: #E1E1E1
-}
-
-.color9 {
-	color: #F6F6F6
-}
-
-.color10 {
-	color: #FFFFFF
-}
-
-/*****************************************************/
-
-/* body { font-size: 62.5%; } */
+/* Some CSS for the JQuery UI forms */
 label,input {
 	display: block;
 }
@@ -429,7 +374,7 @@ fieldset {
 	border: 0;
 	margin-top: 25px;
 }
-/*  h1 { font-size: 1.2em; margin: .6em 0; } */
+
 .ui-dialog .ui-state-error {
 	padding: .3em;
 }
